Reasonable draft. We need to discuss initiality among others points.

--- a/local.bib
+++ b/local.bib
@@ -45,3 +45,18 @@
   year = 	 2024,
   note = "Accessed: 2024-08-26"
 }
+@inproceedings{kaposi2023towards,
+  title={Towards quotient inductive-inductive-recursive types},
+  author={Ambrus Kaposi},
+  booktitle={29th International Conference on Types for Proofs and Programs TYPES 2023--Abstracts},
+  year = 	 2023,  
+  pages={124}
+}
+@inproceedings{altenkirch2023munchhausen,
+  title={The M{\"u}nchhausen Method in Type Theory},
+  author={Altenkirch, Thorsten and Kaposi, Ambrus and {\v{S}}inkarovs, Artjoms and V{\'e}gh, Tam{\'a}s},
+  booktitle={28th International Conference on Types for Proofs and Programs 2022},
+  pages={10},
+  year={2023},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum f{\"u}r Informatik}
+}
