phil updated paper.lagda and local.bib

--- a/local.bib
+++ b/local.bib
@@ -60,3 +60,26 @@
   year={2023},
   organization={Schloss Dagstuhl-Leibniz-Zentrum f{\"u}r Informatik}
 }
+@book{curry1958combinatory,
+  title={Combinatory logic},
+  author={Curry, Haskell Brooks and Feys, Robert},
+  volume={1},
+  year={1958},
+  publisher={North-Holland Amsterdam}
+}
+@article{de_bruijn_lambda_1972,
+	title = {Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
+	volume = {75},
+	issn = {1385-7258},
+	url = {https://www.sciencedirect.com/science/article/pii/1385725872900340},
+	doi = {10.1016/1385-7258(72)90034-0},
+	abstract = {In ordinary lambda calculus the occurrences of a bound variable are made recognizable by the use of one and the same (otherwise irrelevant) name at all occurrences. This convention is known to cause considerable trouble in cases of substitution. In the present paper a different notational system is developed, where occurrences of variables are indicated by integers giving the “distance” to the binding λ instead of a name attached to that λ. The system is claimed to be efficient for automatic formula manipulation as well as for metalingual discussion. As an example the most essential part of a proof of the Church-Rosser theorem is presented in this namefree calculus.},
+	number = {5},
+	urldate = {2024-08-28},
+	journal = {Indagationes Mathematicae (Proceedings)},
+	author = {de Bruijn, N. G},
+	month = jan,
+	year = {1972},
+	pages = {381--392},
+	file = {ScienceDirect Snapshot:/Users/wadler/Zotero/storage/HUQN42XP/1385725872900340.html:text/html;Submitted Version:/Users/wadler/Zotero/storage/W8Q4QNXF/de Bruijn - 1972 - Lambda calculus notation with nameless dummies, a .pdf:application/pdf},
+}
