addressed all issues raised by Phil

--- a/local.bib
+++ b/local.bib
@@ -83,3 +83,12 @@
 	pages = {381--392},
 	file = {ScienceDirect Snapshot:/Users/wadler/Zotero/storage/HUQN42XP/1385725872900340.html:text/html;Submitted Version:/Users/wadler/Zotero/storage/W8Q4QNXF/de Bruijn - 1972 - Lambda calculus notation with nameless dummies, a .pdf:application/pdf},
 }
+
+@article{castellan2021categories,
+  title={Categories with families: Unityped, simply typed, and dependently typed},
+  author={Castellan, Simon and Clairambault, Pierre and Dybjer, Peter},
+  journal={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics},
+  pages={135--180},
+  year={2021},
+  publisher={Springer}
+}
