added related work

--- a/local.bib
+++ b/local.bib
@@ -92,3 +92,27 @@
   year={2021},
   publisher={Springer}
 }
+
+@inproceedings{stark2019autosubst,
+  title={Autosubst 2: reasoning with multi-sorted de Bruijn terms and vector substitutions},
+  author={Stark, Kathrin and Sch{\"a}fer, Steven and Kaiser, Jonas},
+  booktitle={Proceedings of the 8th ACM SIGPLAN International Conference on Certified Programs and Proofs},
+  pages={166--180},
+  year={2019}
+}
+
+@inproceedings{saffrich2024abstractions,
+  title={Abstractions for Multi-Sorted Substitutions},
+  author={Saffrich, Hannes},
+  booktitle={15th International Conference on Interactive Theorem Proving (ITP 2024)},
+  year={2024},
+  organization={Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik}
+}
+
+@inproceedings{saffrich2024intrinsically,
+  title={Intrinsically Typed Syntax, a Logical Relation, and the Scourge of the Transfer Lemma},
+  author={Saffrich, Hannes and Thiemann, Peter and Weidner, Marius},
+  booktitle={Proceedings of the 9th ACM SIGPLAN International Workshop on Type-Driven Development},
+  pages={2--15},
+  year={2024}
+}
