add Curry and Feys to bib

--- a/local.bib
+++ b/local.bib
@@ -116,3 +116,15 @@
   pages={2--15},
   year={2024}
 }
+
+
+@book{curry_combinatory_1958,
+	series = {Combinatory {Logic}},
+	title = {Combinatory {Logic}},
+	url = {https://books.google.co.uk/books?id=fEnuAAAAMAAJ},
+	number = {v. 1},
+	publisher = {North-Holland Publishing Company},
+	author = {Curry, H.B. and Feys, R.},
+	year = {1958},
+	lccn = {a59001593},
+}
