--- a/local.bib
+++ b/local.bib
@@ -128,3 +128,21 @@
 	year = {1958},
 	lccn = {a59001593},
 }
+
+@article{altenkirch2016tt_in_tt,
+title = {Type theory in type theory using quotient inductive types},
+author = {Altenkirch, Thorsten and Kaposi, Ambrus},
+booktitle = {Proceedings of the 43rd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+year = {2016},
+pages = {18–29},
+issue_date = {January 2016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {51},
+number = {1},
+issn = {0362-1340},
+doi = {10.1145/2914770.2837638},
+journal = {SIGPLAN Not.},
+month = {jan},
+numpages = {12},
+}
