--- a/local.bib
+++ b/local.bib
@@ -146,3 +146,21 @@ journal = {SIGPLAN Not.},
 month = {jan},
 numpages = {12},
 }
+
+@article{wadler_explicit_2024,
+	title = {Explicit weakening},
+	volume = {413},
+	issn = {2075-2180},
+	url = {http://arxiv.org/abs/2412.03124},
+	doi = {10.4204/EPTCS.413.2},
+	abstract = {I present a novel formulation of substitution, where facts about substitution that previously required tens or hundreds of lines to justify in a proof assistant now follow immediately - they can be justified by writing the four letters "refl". The paper is an executable literate Agda script, and source of the paper is available as an artifact in the file Weaken.lagda.md. Not all consequences of the pandemic have been awful. For the last three years, I've had the great pleasure of meeting with Peter Thiemann and Jeremy Siek for a couple of hours every week, via Zoom, exploring topics including core calculi, gradual typing, and formalisation in Agda. The work reported here arose from those discussions, and is dedicated to Peter on the occasion of his 60th birthday.},
+	urldate = {2024-12-30},
+	journal = {Electronic Proceedings in Theoretical Computer Science},
+	author = {Wadler, Philip},
+	month = nov,
+	year = {2024},
+	note = {Festschrift for Peter Thiemann},
+	keywords = {Computer Science - Logic in Computer Science, Computer Science - Programming Languages},
+	pages = {15--26},
+	file = {Preprint PDF:/Users/philipwadler/Zotero/storage/THSKE5SY/Wadler - 2024 - Explicit Weakening.pdf:application/pdf;Snapshot:/Users/philipwadler/Zotero/storage/NEUG5QP4/2412.html:text/html},
+}
