Add call graph diagrams and explain termination
Need to update explanations in laws.lagda

--- a/local.bib
+++ b/local.bib
@@ -164,3 +164,11 @@ numpages = {12},
 	pages = {15--26},
 	file = {Preprint PDF:/Users/philipwadler/Zotero/storage/THSKE5SY/Wadler - 2024 - Explicit Weakening.pdf:application/pdf;Snapshot:/Users/philipwadler/Zotero/storage/NEUG5QP4/2412.html:text/html},
 }
+
+@inproceedings{keller2010hereditary,
+  title={Hereditary substitutions for simple types, formalized},
+  author={Keller, Chantal and Altenkirch, Thorsten},
+  booktitle={Proceedings of the third ACM SIGPLAN workshop on Mathematically structured functional programming},
+  pages={3--10},
+  year={2010}
+}
