added reference to Andreas Abel expanded alternative defn of Sort (todo 6) discussion on rec defn in conclusion (Todo 4) reworded reference to monadic approach in intro (todo 5)

--- a/local.bib
+++ b/local.bib
@@ -164,3 +164,14 @@ numpages = {12},
 	pages = {15--26},
 	file = {Preprint PDF:/Users/philipwadler/Zotero/storage/THSKE5SY/Wadler - 2024 - Explicit Weakening.pdf:application/pdf;Snapshot:/Users/philipwadler/Zotero/storage/NEUG5QP4/2412.html:text/html},
 }
+
+@Unpublished{abel:subst11,
+  author = 	 {Andreas Abel},
+  title = 	 {Parallel substitution as an operation for untyped de Bruijn terms},
+  note = 	 {Agda proof},
+  OPTkey = 	 {},
+  OPTmonth = 	 {},
+  year =	 {2011},
+  OPTannote = 	 {}
+}
+
