Small formatting tweaks

--- a/local.bib
+++ b/local.bib
@@ -180,7 +180,8 @@ numpages = {12},
   OPTkey = 	 {},
   OPTmonth = 	 {},
   year =	 {2011},
-  OPTannote = 	 {}
+  OPTannote = 	 {},
+  url={https://www.cse.chalmers.se/~abela/html/ParallelSubstitution.html}
 }
 
 @article{mcbride2018everybody,
