--- a/local.bib
+++ b/local.bib
@@ -202,3 +202,12 @@ publisher = "Open Publishing Association",
 note = "Mathematically Structured Functional Programming, MSFP ; Conference date: 08-07-2018 Through 08-07-2018",
 url = "https://msfp2018.bentnib.org/",
 }
+
+@article{hickey1996formal,
+  title={Formal objects in type theory using very dependent types},
+  author={Hickey, Jason J},
+  journal={Foundations of Object Oriented Languages},
+  volume={3},
+  pages={117--170},
+  year={1996}
+}
