Author name citations working
Plus a bunch of small spacing tweaks

--- a/local.bib
+++ b/local.bib
@@ -38,8 +38,14 @@
   pages =	 {1--41},
   month =	 {January}
 }
-@misc{agda,
-  author = "The Agda Team",
+@misc{Agda_Developers_Agda,
+author = {{The Agda Team}},
+title = {{Agda}},
+url = {https://agda.readthedocs.io/},
+version = {2.8.0}
+}
+@software{agda,
+  author = {{The Agda Team}},
   title = "Agda Documentation",
   howpublished = "\url{https://agda.readthedocs.io}",
   year = 	 2024,
@@ -47,7 +53,7 @@
 }
 @inproceedings{kaposi2023towards,
   title={Towards quotient inductive-inductive-recursive types},
-  author={Ambrus Kaposi},
+  author={Kaposi, Ambrus},
   booktitle={29th International Conference on Types for Proofs and Programs TYPES 2023--Abstracts},
   year = 	 2023,  
   pages={124}
