Fix CwF citation
Also remove editor entries from .bib file (prior years LFMTP
submissions do not appear to include them, and it saves a bit of
space)

--- a/local.bib
+++ b/local.bib
@@ -1,8 +1,6 @@
 @inproceedings{alti:csl99,
   author       = {Thorsten Altenkirch and
                   Bernhard Reus},
-  editor       = {J{\"{o}}rg Flum and
-                  Mario Rodr{\'{\i}}guez{-}Artalejo},
   title        = {Monadic Presentations of Lambda Terms Using Generalized Inductive
                   Types},
   booktitle    = {Computer Science Logic, 13th International Workshop, {CSL} '99, 8th
@@ -28,8 +26,6 @@
                   James Chapman and
                   Conor McBride and
                   James McKinna},
-  editor       = {Yves Bertot and
-                  Viktor Vafeiadis},
   title        = {Type-and-scope safe programs and their proofs},
   booktitle    = {Proceedings of the 6th {ACM} {SIGPLAN} Conference on Certified Programs
                   and Proofs, {CPP} 2017, Paris, France, January 16-17, 2017},
@@ -87,8 +83,6 @@
                   Ambrus Kaposi and
                   Artjoms Sinkarovs and
                   Tam{\'{a}}s V{\'{e}}gh},
-  editor       = {Delia Kesner and
-                  Pierre{-}Marie P{\'{e}}drot},
   title        = {The M{\"{u}}nchhausen Method in Type Theory},
   booktitle    = {28th International Conference on Types for Proofs and Programs, {TYPES}
                   2022, June 20-25, 2022, LS2N, University of Nantes, France},
@@ -115,12 +109,10 @@
 	pages = {381--392},
 }
 
-@inbook{Castellan2021,
+@inbook{castellan2021categories,
   author={Castellan, Simon
   and Clairambault, Pierre
   and Dybjer, Peter},
-  editor={Casadio, Claudia
-  and Scott, Philip J.},
   title={Categories with Families: Unityped, Simply Typed, and Dependently Typed},
   bookTitle={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics},
   year={2021},
@@ -134,8 +126,6 @@
   author       = {Kathrin Stark and
                   Steven Sch{\"{a}}fer and
                   Jonas Kaiser},
-  editor       = {Assia Mahboubi and
-                  Magnus O. Myreen},
   title        = {Autosubst 2: reasoning with multi-sorted de Bruijn terms and vector
                   substitutions},
   booktitle    = {Proceedings of the 8th {ACM} {SIGPLAN} International Conference on
@@ -149,9 +139,6 @@
 
 @inproceedings{saffrich2024abstractions,
   author       = {Hannes Saffrich},
-  editor       = {Yves Bertot and
-                  Temur Kutsia and
-                  Michael Norrish},
   title        = {Abstractions for Multi-Sorted Substitutions},
   booktitle    = {15th International Conference on Interactive Theorem Proving, {ITP}
                   2024, September 9-14, 2024, Tbilisi, Georgia},
@@ -167,8 +154,6 @@
   author       = {Hannes Saffrich and
                   Peter Thiemann and
                   Marius Weidner},
-  editor       = {Sandra Alves and
-                  Jesper Cockx},
   title        = {Intrinsically Typed Syntax, a Logical Relation, and the Scourge of
                   the Transfer Lemma},
   booktitle    = {Proceedings of the 9th {ACM} {SIGPLAN} International Workshop on Type-Driven
@@ -208,9 +193,6 @@
 
 @article{wadler_explicit_2024,
   author       = {Philip Wadler},
-  editor       = {Annette Bieniusa and
-                  Markus Degen and
-                  Stefan Wehr},
   title        = {Explicit Weakening},
   booktitle    = {A Second Soul: Celebrating the Many Languages of Programming - Festschrift
                   in Honor of Peter Thiemann's Sixtieth Birthday, Freiburg, Germany,
@@ -225,8 +207,6 @@
 @inproceedings{keller2010hereditary,
   author       = {Chantal Keller and
                   Thorsten Altenkirch},
-  editor       = {Venanzio Capretta and
-                  James Chapman},
   title        = {Hereditary Substitutions for Simple Types, Formalized},
   booktitle    = {Proceedings of the 3rd {ACM} {SIGPLAN} Workshop on Mathematically
                   Structured Functional Programming, MSFP@ICFP 2010, Baltimore, MD,
@@ -247,8 +227,6 @@
 
 @article{mcbride2018everybody,
   author       = {Conor McBride},
-  editor       = {Robert Atkey and
-                  Sam Lindley},
   title        = {Everybody's Got To Be Somewhere},
   booktitle    = {Proceedings of the 7th Workshop on Mathematically Structured Functional
                   Programming, MSFP@FSCD 2018, Oxford, UK, 8th July 2018},
