--- a/local.bib
+++ b/local.bib
@@ -94,7 +94,7 @@
   doi          = {10.4230/LIPICS.TYPES.2022.10},
 }
 
-@article{de_bruijn_lambda_1972,
+@article{bruijn1972lambda,
 	title = {Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
 	volume = {75},
 	issn = {1385-7258},
@@ -173,7 +173,7 @@
   publisher={North-Holland Publishing Company},
 }
 
-@article{altenkirch2016tt_in_tt,
+@article{altenkirch2016tt,
   title = {Type theory in type theory using quotient inductive types},
   author = {Altenkirch, Thorsten and Kaposi, Ambrus},
   booktitle = {Proceedings of the 43rd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
@@ -191,7 +191,7 @@
   numpages = {12},
 }
 
-@article{wadler_explicit_2024,
+@article{wadler2024explicit,
   author       = {Philip Wadler},
   title        = {Explicit Weakening},
   booktitle    = {A Second Soul: Celebrating the Many Languages of Programming - Festschrift
