--- a/local.bib
+++ b/local.bib
@@ -122,6 +122,24 @@
   doi={10.1007/978-3-030-66545-6_5},
 }
 
+@inproceedings{stark2015autosubst,
+  author       = {Steven Sch{\"{a}}fer and
+                  Tobias Tebbi and
+                  Gert Smolka},
+  editor       = {Christian Urban and
+                  Xingyuan Zhang},
+  title        = {Autosubst: Reasoning with de Bruijn Terms and Parallel Substitutions},
+  booktitle    = {Interactive Theorem Proving - 6th International Conference, {ITP}
+                  2015, Nanjing, China, August 24-27, 2015, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {9236},
+  pages        = {359--374},
+  publisher    = {Springer},
+  year         = {2015},
+  url          = {https://doi.org/10.1007/978-3-319-22102-1\_24},
+  doi          = {10.1007/978-3-319-22102-1\_24},
+}
+
 @inproceedings{stark2019autosubst,
   author       = {Kathrin Stark and
                   Steven Sch{\"{a}}fer and
