Use "inproceedings" for entries with "booktitle"s

--- a/local.bib
+++ b/local.bib
@@ -191,7 +191,7 @@
   publisher={North-Holland Publishing Company},
 }
 
-@article{altenkirch2016tt,
+@inproceedings{altenkirch2016tt,
   title = {Type theory in type theory using quotient inductive types},
   author = {Altenkirch, Thorsten and Kaposi, Ambrus},
   booktitle = {Proceedings of the 43rd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
@@ -209,7 +209,7 @@
   numpages = {12},
 }
 
-@article{wadler2024explicit,
+@inproceedings{wadler2024explicit,
   author       = {Philip Wadler},
   title        = {Explicit Weakening},
   booktitle    = {A Second Soul: Celebrating the Many Languages of Programming - Festschrift
@@ -243,7 +243,7 @@
   url={https://www.cse.chalmers.se/~abela/html/ParallelSubstitution.html}
 }
 
-@article{mcbride2018everybody,
+@inproceedings{mcbride2018everybody,
   author       = {Conor McBride},
   title        = {Everybody's Got To Be Somewhere},
   booktitle    = {Proceedings of the 7th Workshop on Mathematically Structured Functional
