--- a/local.bib
+++ b/local.bib
@@ -264,3 +264,59 @@
   year={1996},
   url={https://www.cs.cornell.edu/jyh/papers/fool3/paper.pdf}
 }
+
+@inproceedings{fiore1999abstract,
+  author       = {Marcelo P. Fiore and
+                  Gordon D. Plotkin and
+                  Daniele Turi},
+  title        = {Abstract Syntax and Variable Binding},
+  booktitle    = {14th Annual {IEEE} Symposium on Logic in Computer Science, Trento,
+                  Italy, July 2-5, 1999},
+  pages        = {193--202},
+  publisher    = {{IEEE} Computer Society},
+  year         = {1999},
+  url          = {https://doi.org/10.1109/LICS.1999.782615},
+  doi          = {10.1109/LICS.1999.782615},
+}
+
+@inproceedings{aydemir2005poplmark,
+  author       = {Brian E. Aydemir and
+                  Aaron Bohannon and
+                  Matthew Fairbairn and
+                  J. Nathan Foster and
+                  Benjamin C. Pierce and
+                  Peter Sewell and
+                  Dimitrios Vytiniotis and
+                  Geoffrey Washburn and
+                  Stephanie Weirich and
+                  Steve Zdancewic},
+  editor       = {Joe Hurd and
+                  Thomas F. Melham},
+  title        = {Mechanized Metatheory for the Masses: The PoplMark Challenge},
+  booktitle    = {Theorem Proving in Higher Order Logics, 18th International Conference,
+                  TPHOLs 2005, Oxford, UK, August 22-25, 2005, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {3603},
+  pages        = {50--65},
+  publisher    = {Springer},
+  year         = {2005},
+  url          = {https://doi.org/10.1007/11541868\_4},
+  doi          = {10.1007/11541868\_4},
+}
+
+@article{abel2019poplmark,
+  author       = {Andreas Abel and
+                  Guillaume Allais and
+                  Aliya Hameer and
+                  Brigitte Pientka and
+                  Alberto Momigliano and
+                  Steven Sch{\"{a}}fer and
+                  Kathrin Stark},
+  title        = {POPLMark reloaded: Mechanizing proofs by logical relations},
+  journal      = {J. Funct. Program.},
+  volume       = {29},
+  pages        = {e19},
+  year         = {2019},
+  url          = {https://doi.org/10.1017/S0956796819000170},
+  doi          = {10.1017/S0956796819000170},
+}
