--- a/local.bib
+++ b/local.bib
@@ -122,7 +122,7 @@
   doi={10.1007/978-3-030-66545-6_5},
 }
 
-@inproceedings{stark2015autosubst,
+@inproceedings{schafer2015autosubst,
   author       = {Steven Sch{\"{a}}fer and
                   Tobias Tebbi and
                   Gert Smolka},
@@ -278,6 +278,23 @@
   doi          = {10.1109/LICS.1999.782615},
 }
 
+@inproceedings{adams2004formal,
+  author       = {Robin Adams},
+  editor       = {Jean{-}Christophe Filli{\^{a}}tre and
+                  Christine Paulin{-}Mohring and
+                  Benjamin Werner},
+  title        = {Formalized Metatheory with Terms Represented by an Indexed Family
+                  of Types},
+  booktitle    = {Types for Proofs and Programs, International Workshop, {TYPES} 2004,
+                  Jouy-en-Josas, France, December 15-18, 2004, Revised Selected Papers},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {3839},
+  pages        = {1--16},
+  publisher    = {Springer},
+  year         = {2004},
+  doi          = {10.1007/11617990\_1}
+}
+
 @inproceedings{aydemir2005poplmark,
   author       = {Brian E. Aydemir and
                   Aaron Bohannon and
@@ -316,4 +333,18 @@
   pages        = {e19},
   year         = {2019},
   doi          = {10.1017/S0956796819000170},
+}
+
+@article{benton2012strongly,
+  author       = {Nick Benton and
+                  Chung{-}Kil Hur and
+                  Andrew Kennedy and
+                  Conor McBride},
+  title        = {Strongly Typed Term Representations in Coq},
+  journal      = {J. Autom. Reason.},
+  volume       = {49},
+  number       = {2},
+  pages        = {141--159},
+  year         = {2012},
+  doi          = {10.1007/S10817-011-9219-0},
 }
